# dsjc_prophet

./: README.md  app_dsjc.py  dsjc_pymc_rebuild.ipynb  linear_regression_with_pymc.ipynb  prophet_rebuild.py  pyproject.toml  requirements.txt
