[tool.poetry]
name = "pymc3"
version = "0.1.0"
description = ""
authors = ["ZOJBERTH <jan.berthold@zeiss.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pymc = "^5.0.1"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
streamlit = "^1.17.0"
prophet = "^1.1.2"
streamlit-authenticator = "^0.2.1"
pyyaml = "^6.0"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.0"
statsmodels = "^0.13.5"
plotly = "^5.13.0"
black = "^23.1.0"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
